L3/S6/Compil/AIDE_td7/AIDE/pppascal.output
Terminaux inutilisés dans la grammaire

   Def
   Dep
   Mp
   T_com
   Ind
   T_err
   T_bot


Grammaire

    0 $accept: MP $end

    1 MP: L_vart C

    2 E: E Pl T
    3  | E Mo T
    4  | E Or T
    5  | E Lt T
    6  | E Eq T
    7  | T

    8 T: T Mu F
    9  | T And F
   10  | Not F
   11  | F

   12 F: '(' E ')'
   13  | I
   14  | V
   15  | true
   16  | false
   17  | NewAr TP '[' E ']'
   18  | Et

   19 Et: V '[' E ']'
   20   | Et '[' E ']'

   21 C: C Se Ca
   22  | Ca

   23 Ca: Et Af E
   24   | V Af E
   25   | Sk
   26   | '{' C '}'
   27   | If E Th C El Ca
   28   | Wh E Do Ca

   29 Argt: V ':' TP

   30 TP: T_boo
   31   | T_int
   32   | T_ar TP

   33 L_vart: %empty
   34       | L_vartnn

   35 L_vartnn: Var Argt
   36         | L_vartnn ',' Var Argt


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 12
')' (41) 12
',' (44) 36
':' (58) 29
'[' (91) 17 19 20
']' (93) 17 19 20
'{' (123) 26
'}' (125) 26
error (256)
I (258) 13
V (259) 14 19 24 29
Def (260)
Dep (261)
Mp (262)
Af (263) 23 24
Sk (264) 25
NewAr (265) 17
T_ar (266) 32
T_com (267)
true (268) 15
false (269) 16
Se (270) 21
Ind (271)
If (272) 27
Th (273) 27
El (274) 27
Var (275) 35 36
Wh (276) 28
Do (277) 28
Pl (278) 2
Mo (279) 3
Mu (280) 8
And (281) 9
Or (282) 4
Not (283) 10
Lt (284) 5
Eq (285) 6
T_int (286) 31
T_boo (287) 30
T_err (288)
T_bot (289)


Non-terminaux, suivis des règles où ils apparaissent

$accept (43)
    à gauche: 0
MP (44)
    à gauche: 1, à droite: 0
E (45)
    à gauche: 2 3 4 5 6 7, à droite: 2 3 4 5 6 12 17 19 20 23 24
    27 28
T (46)
    à gauche: 8 9 10 11, à droite: 2 3 4 5 6 7 8 9
F (47)
    à gauche: 12 13 14 15 16 17 18, à droite: 8 9 10 11
Et (48)
    à gauche: 19 20, à droite: 18 20 23
C (49)
    à gauche: 21 22, à droite: 1 21 26 27
Ca (50)
    à gauche: 23 24 25 26 27 28, à droite: 21 22 27 28
Argt (51)
    à gauche: 29, à droite: 35 36
TP (52)
    à gauche: 30 31 32, à droite: 17 29 32
L_vart (53)
    à gauche: 33 34, à droite: 1
L_vartnn (54)
    à gauche: 35 36, à droite: 34 36


État 0

    0 $accept: . MP $end
    1 MP: . L_vart C
   33 L_vart: . %empty  [V, Sk, If, Wh, '{']
   34       | . L_vartnn
   35 L_vartnn: . Var Argt
   36         | . L_vartnn ',' Var Argt

    Var  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 33 (L_vart)

    MP        aller à l'état 2
    L_vart    aller à l'état 3
    L_vartnn  aller à l'état 4


État 1

   29 Argt: . V ':' TP
   35 L_vartnn: Var . Argt

    V  décalage et aller à l'état 5

    Argt  aller à l'état 6


État 2

    0 $accept: MP . $end

    $end  décalage et aller à l'état 7


État 3

    1 MP: L_vart . C
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'
   21 C: . C Se Ca
   22  | . Ca
   23 Ca: . Et Af E
   24   | . V Af E
   25   | . Sk
   26   | . '{' C '}'
   27   | . If E Th C El Ca
   28   | . Wh E Do Ca

    V    décalage et aller à l'état 8
    Sk   décalage et aller à l'état 9
    If   décalage et aller à l'état 10
    Wh   décalage et aller à l'état 11
    '{'  décalage et aller à l'état 12

    Et  aller à l'état 13
    C   aller à l'état 14
    Ca  aller à l'état 15


État 4

   34 L_vart: L_vartnn .  [V, Sk, If, Wh, '{']
   36 L_vartnn: L_vartnn . ',' Var Argt

    ','  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 34 (L_vart)


État 5

   29 Argt: V . ':' TP

    ':'  décalage et aller à l'état 17


État 6

   35 L_vartnn: Var Argt .

    $défaut  réduction par utilisation de la règle 35 (L_vartnn)


État 7

    0 $accept: MP $end .

    $défaut  accepter


État 8

   19 Et: V . '[' E ']'
   24 Ca: V . Af E

    Af   décalage et aller à l'état 18
    '['  décalage et aller à l'état 19


État 9

   25 Ca: Sk .

    $défaut  réduction par utilisation de la règle 25 (Ca)


État 10

    2 E: . E Pl T
    3  | . E Mo T
    4  | . E Or T
    5  | . E Lt T
    6  | . E Eq T
    7  | . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'
   27 Ca: If . E Th C El Ca

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    E   aller à l'état 27
    T   aller à l'état 28
    F   aller à l'état 29
    Et  aller à l'état 30


État 11

    2 E: . E Pl T
    3  | . E Mo T
    4  | . E Or T
    5  | . E Lt T
    6  | . E Eq T
    7  | . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'
   28 Ca: Wh . E Do Ca

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    E   aller à l'état 31
    T   aller à l'état 28
    F   aller à l'état 29
    Et  aller à l'état 30


État 12

   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'
   21 C: . C Se Ca
   22  | . Ca
   23 Ca: . Et Af E
   24   | . V Af E
   25   | . Sk
   26   | . '{' C '}'
   26   | '{' . C '}'
   27   | . If E Th C El Ca
   28   | . Wh E Do Ca

    V    décalage et aller à l'état 8
    Sk   décalage et aller à l'état 9
    If   décalage et aller à l'état 10
    Wh   décalage et aller à l'état 11
    '{'  décalage et aller à l'état 12

    Et  aller à l'état 13
    C   aller à l'état 32
    Ca  aller à l'état 15


État 13

   20 Et: Et . '[' E ']'
   23 Ca: Et . Af E

    Af   décalage et aller à l'état 33
    '['  décalage et aller à l'état 34


État 14

    1 MP: L_vart C .  [$end]
   21 C: C . Se Ca

    Se  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 1 (MP)


État 15

   22 C: Ca .

    $défaut  réduction par utilisation de la règle 22 (C)


État 16

   36 L_vartnn: L_vartnn ',' . Var Argt

    Var  décalage et aller à l'état 36


État 17

   29 Argt: V ':' . TP
   30 TP: . T_boo
   31   | . T_int
   32   | . T_ar TP

    T_ar   décalage et aller à l'état 37
    T_int  décalage et aller à l'état 38
    T_boo  décalage et aller à l'état 39

    TP  aller à l'état 40


État 18

    2 E: . E Pl T
    3  | . E Mo T
    4  | . E Or T
    5  | . E Lt T
    6  | . E Eq T
    7  | . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'
   24 Ca: V Af . E

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    E   aller à l'état 41
    T   aller à l'état 28
    F   aller à l'état 29
    Et  aller à l'état 30


État 19

    2 E: . E Pl T
    3  | . E Mo T
    4  | . E Or T
    5  | . E Lt T
    6  | . E Eq T
    7  | . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   19   | V '[' . E ']'
   20   | . Et '[' E ']'

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    E   aller à l'état 42
    T   aller à l'état 28
    F   aller à l'état 29
    Et  aller à l'état 30


État 20

   13 F: I .

    $défaut  réduction par utilisation de la règle 13 (F)


État 21

   14 F: V .  [$end, Se, Th, El, Do, Pl, Mo, Mu, And, Or, Lt, Eq, ')', ']', '}']
   19 Et: V . '[' E ']'

    '['  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 14 (F)


État 22

   17 F: NewAr . TP '[' E ']'
   30 TP: . T_boo
   31   | . T_int
   32   | . T_ar TP

    T_ar   décalage et aller à l'état 37
    T_int  décalage et aller à l'état 38
    T_boo  décalage et aller à l'état 39

    TP  aller à l'état 43


État 23

   15 F: true .

    $défaut  réduction par utilisation de la règle 15 (F)


État 24

   16 F: false .

    $défaut  réduction par utilisation de la règle 16 (F)


État 25

   10 T: Not . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    '('    décalage et aller à l'état 26

    F   aller à l'état 44
    Et  aller à l'état 30


État 26

    2 E: . E Pl T
    3  | . E Mo T
    4  | . E Or T
    5  | . E Lt T
    6  | . E Eq T
    7  | . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   12  | '(' . E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    E   aller à l'état 45
    T   aller à l'état 28
    F   aller à l'état 29
    Et  aller à l'état 30


État 27

    2 E: E . Pl T
    3  | E . Mo T
    4  | E . Or T
    5  | E . Lt T
    6  | E . Eq T
   27 Ca: If E . Th C El Ca

    Th  décalage et aller à l'état 46
    Pl  décalage et aller à l'état 47
    Mo  décalage et aller à l'état 48
    Or  décalage et aller à l'état 49
    Lt  décalage et aller à l'état 50
    Eq  décalage et aller à l'état 51


État 28

    7 E: T .  [$end, Se, Th, El, Do, Pl, Mo, Or, Lt, Eq, ')', ']', '}']
    8 T: T . Mu F
    9  | T . And F

    Mu   décalage et aller à l'état 52
    And  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 7 (E)


État 29

   11 T: F .

    $défaut  réduction par utilisation de la règle 11 (T)


État 30

   18 F: Et .  [$end, Se, Th, El, Do, Pl, Mo, Mu, And, Or, Lt, Eq, ')', ']', '}']
   20 Et: Et . '[' E ']'

    '['  décalage et aller à l'état 34

    $défaut  réduction par utilisation de la règle 18 (F)


État 31

    2 E: E . Pl T
    3  | E . Mo T
    4  | E . Or T
    5  | E . Lt T
    6  | E . Eq T
   28 Ca: Wh E . Do Ca

    Do  décalage et aller à l'état 54
    Pl  décalage et aller à l'état 47
    Mo  décalage et aller à l'état 48
    Or  décalage et aller à l'état 49
    Lt  décalage et aller à l'état 50
    Eq  décalage et aller à l'état 51


État 32

   21 C: C . Se Ca
   26 Ca: '{' C . '}'

    Se   décalage et aller à l'état 35
    '}'  décalage et aller à l'état 55


État 33

    2 E: . E Pl T
    3  | . E Mo T
    4  | . E Or T
    5  | . E Lt T
    6  | . E Eq T
    7  | . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'
   23 Ca: Et Af . E

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    E   aller à l'état 56
    T   aller à l'état 28
    F   aller à l'état 29
    Et  aller à l'état 30


État 34

    2 E: . E Pl T
    3  | . E Mo T
    4  | . E Or T
    5  | . E Lt T
    6  | . E Eq T
    7  | . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'
   20   | Et '[' . E ']'

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    E   aller à l'état 57
    T   aller à l'état 28
    F   aller à l'état 29
    Et  aller à l'état 30


État 35

   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'
   21 C: C Se . Ca
   23 Ca: . Et Af E
   24   | . V Af E
   25   | . Sk
   26   | . '{' C '}'
   27   | . If E Th C El Ca
   28   | . Wh E Do Ca

    V    décalage et aller à l'état 8
    Sk   décalage et aller à l'état 9
    If   décalage et aller à l'état 10
    Wh   décalage et aller à l'état 11
    '{'  décalage et aller à l'état 12

    Et  aller à l'état 13
    Ca  aller à l'état 58


État 36

   29 Argt: . V ':' TP
   36 L_vartnn: L_vartnn ',' Var . Argt

    V  décalage et aller à l'état 5

    Argt  aller à l'état 59


État 37

   30 TP: . T_boo
   31   | . T_int
   32   | . T_ar TP
   32   | T_ar . TP

    T_ar   décalage et aller à l'état 37
    T_int  décalage et aller à l'état 38
    T_boo  décalage et aller à l'état 39

    TP  aller à l'état 60


État 38

   31 TP: T_int .

    $défaut  réduction par utilisation de la règle 31 (TP)


État 39

   30 TP: T_boo .

    $défaut  réduction par utilisation de la règle 30 (TP)


État 40

   29 Argt: V ':' TP .

    $défaut  réduction par utilisation de la règle 29 (Argt)


État 41

    2 E: E . Pl T
    3  | E . Mo T
    4  | E . Or T
    5  | E . Lt T
    6  | E . Eq T
   24 Ca: V Af E .  [$end, Se, El, '}']

    Pl  décalage et aller à l'état 47
    Mo  décalage et aller à l'état 48
    Or  décalage et aller à l'état 49
    Lt  décalage et aller à l'état 50
    Eq  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 24 (Ca)


État 42

    2 E: E . Pl T
    3  | E . Mo T
    4  | E . Or T
    5  | E . Lt T
    6  | E . Eq T
   19 Et: V '[' E . ']'

    Pl   décalage et aller à l'état 47
    Mo   décalage et aller à l'état 48
    Or   décalage et aller à l'état 49
    Lt   décalage et aller à l'état 50
    Eq   décalage et aller à l'état 51
    ']'  décalage et aller à l'état 61


État 43

   17 F: NewAr TP . '[' E ']'

    '['  décalage et aller à l'état 62


État 44

   10 T: Not F .

    $défaut  réduction par utilisation de la règle 10 (T)


État 45

    2 E: E . Pl T
    3  | E . Mo T
    4  | E . Or T
    5  | E . Lt T
    6  | E . Eq T
   12 F: '(' E . ')'

    Pl   décalage et aller à l'état 47
    Mo   décalage et aller à l'état 48
    Or   décalage et aller à l'état 49
    Lt   décalage et aller à l'état 50
    Eq   décalage et aller à l'état 51
    ')'  décalage et aller à l'état 63


État 46

   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'
   21 C: . C Se Ca
   22  | . Ca
   23 Ca: . Et Af E
   24   | . V Af E
   25   | . Sk
   26   | . '{' C '}'
   27   | . If E Th C El Ca
   27   | If E Th . C El Ca
   28   | . Wh E Do Ca

    V    décalage et aller à l'état 8
    Sk   décalage et aller à l'état 9
    If   décalage et aller à l'état 10
    Wh   décalage et aller à l'état 11
    '{'  décalage et aller à l'état 12

    Et  aller à l'état 13
    C   aller à l'état 64
    Ca  aller à l'état 15


État 47

    2 E: E Pl . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    T   aller à l'état 65
    F   aller à l'état 29
    Et  aller à l'état 30


État 48

    3 E: E Mo . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    T   aller à l'état 66
    F   aller à l'état 29
    Et  aller à l'état 30


État 49

    4 E: E Or . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    T   aller à l'état 67
    F   aller à l'état 29
    Et  aller à l'état 30


État 50

    5 E: E Lt . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    T   aller à l'état 68
    F   aller à l'état 29
    Et  aller à l'état 30


État 51

    6 E: E Eq . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    Not    décalage et aller à l'état 25
    '('    décalage et aller à l'état 26

    T   aller à l'état 69
    F   aller à l'état 29
    Et  aller à l'état 30


État 52

    8 T: T Mu . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    '('    décalage et aller à l'état 26

    F   aller à l'état 70
    Et  aller à l'état 30


État 53

    9 T: T And . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'

    I      décalage et aller à l'état 20
    V      décalage et aller à l'état 21
    NewAr  décalage et aller à l'état 22
    true   décalage et aller à l'état 23
    false  décalage et aller à l'état 24
    '('    décalage et aller à l'état 26

    F   aller à l'état 71
    Et  aller à l'état 30


État 54

   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'
   23 Ca: . Et Af E
   24   | . V Af E
   25   | . Sk
   26   | . '{' C '}'
   27   | . If E Th C El Ca
   28   | . Wh E Do Ca
   28   | Wh E Do . Ca

    V    décalage et aller à l'état 8
    Sk   décalage et aller à l'état 9
    If   décalage et aller à l'état 10
    Wh   décalage et aller à l'état 11
    '{'  décalage et aller à l'état 12

    Et  aller à l'état 13
    Ca  aller à l'état 72


État 55

   26 Ca: '{' C '}' .

    $défaut  réduction par utilisation de la règle 26 (Ca)


État 56

    2 E: E . Pl T
    3  | E . Mo T
    4  | E . Or T
    5  | E . Lt T
    6  | E . Eq T
   23 Ca: Et Af E .  [$end, Se, El, '}']

    Pl  décalage et aller à l'état 47
    Mo  décalage et aller à l'état 48
    Or  décalage et aller à l'état 49
    Lt  décalage et aller à l'état 50
    Eq  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 23 (Ca)


État 57

    2 E: E . Pl T
    3  | E . Mo T
    4  | E . Or T
    5  | E . Lt T
    6  | E . Eq T
   20 Et: Et '[' E . ']'

    Pl   décalage et aller à l'état 47
    Mo   décalage et aller à l'état 48
    Or   décalage et aller à l'état 49
    Lt   décalage et aller à l'état 50
    Eq   décalage et aller à l'état 51
    ']'  décalage et aller à l'état 73


État 58

   21 C: C Se Ca .

    $défaut  réduction par utilisation de la règle 21 (C)


État 59

   36 L_vartnn: L_vartnn ',' Var Argt .

    $défaut  réduction par utilisation de la règle 36 (L_vartnn)


État 60

   32 TP: T_ar TP .

    $défaut  réduction par utilisation de la règle 32 (TP)


État 61

   19 Et: V '[' E ']' .

    $défaut  réduction par utilisation de la règle 19 (Et)


État 62

    2 E: . E Pl T
    3  | . E Mo T
    4  | . E Or T
    5  | . E Lt T
    6  | . E Eq T
    7  | . T
    8 T: . T Mu F
    9  | . T And F
   10  | . Not F
   11  | . F
   12 F: . '(' E ')'
   13  | . I
   14  | . V
   15  | . true
   16  | . false
   17  | . NewAr TP '[' E ']'
   17  | NewAr TP '[' . E ']'
   18  | . Et
   19 Et: . V '[' E ']'
   20   | . Et '[' E ']'
